[package]
name = "apassembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.17", features = ["cargo"] }
nom = { version = "7.1.1" }
bit_field = "0.10.1"
phf = { version = "0.10", features = ["macros"] }
